     loaded into the Folder Buffer. 

     command : vm-unload-message (bound to 'O')

     This command discards the current body of the message from the
     Folder Buffer and leaves it empty.

     FAILURE RECOVERY: If the cache folder gets corrupted for any
     reason, just delete it from the file system.  A new cache folder
     will be generated upon the next visit.

VM 8.1.0 (beta2, 2010-01-31)

  KNOWN PROBLEMS:

    * Automatic filling is turned off for some plain text messages for
      safety reasons.  Please help us by sending us sample messages
      for which filling fails.

  MAJOR NEW FEATURES:

    * Support for reading and replying to messages in HTML.

    * Full support for IMAP servers.  (See "IMPROVEMENTS for
      imap-folders" below.) 

  CHANGES:

   ** vm-pgg is not loaded by default because it is a set up as an
      add-on.  Users should load it from their .emacs file by using
      the sequence
           (require 'vm-autoloads)
           (require 'vm-pgg)

   ** The variable `vm-mime-show-alternatives' is deprecated.  Set
      the variable `vm-mime-alternative-select-method' to 'all to
      get the same effect.

  IMPROVEMENTS:

   ** The commands `vm-mime-save-all-attachments' and
      `vm-mime-delete-all-attachments' have been moved to the VM core
      (from vm-rfaddons).  New variables:
	 vm-mime-deletable-types 
	    (formerly `vm-mime-delete-all-attachments-types')
	 vm-mime-deletable-type-exceptions
	    (formerly `vm-mime-delete-all-attachments-types-exceptions')
	 vm-mime-savable-types
	    (formerly `vm-mime-save-all-attachments-types')
	 vm-mime-savable-type-exceptions
	    (formerly `vm-mime-save-all-attachments-types-exceptions')         
	 vm-mime-attachment-save-directory
	 vm-mime-attachment-source-directory
	 vm-mime-all-attachments-directory
      See the info file section on MIME attachments for details.

      The options for vm-rfaddons.el should not include